// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clientPricings.userPricings is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <h4
      className="flex-none"
    >
       No dedicated pricings available
    </h4>
  </div>
</div>
`;

exports[`clientPricings.userPricings is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <RoutePricingBox
      key="RANDOM_KEY_0"
      pricingsArr={
        Array [
          Object {
            "pricing": "TRANSPORT_PRICING",
            "transport_category": "TRANSPORT_CATEGORY",
          },
        ]
      }
      routeData={
        Object {
          "name": "ITINERARY_NAME",
        }
      }
    />
  </div>
</div>
`;

exports[`pricingData is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  />
</div>
`;

exports[`state.confirm is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <AdminPromptConfirm
    confirm={[Function]}
    deny={[Function]}
    heading="Are you sure?"
    t={[Function]}
    text="This will delete the pricing  and all related data"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  />
</div>
`;

exports[`state.editorBool is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  />
  <AdminPriceEditor
    adminTools={
      Object {
        "getClientPricings": [Function],
      }
    }
    closeEdit={[Function]}
    hubRoute={false}
    isNew={false}
    pricing={false}
    t={[Function]}
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
    transport={false}
  />
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "black",
        }
      }
    >
      Sebastian
       
      Muller
    </p>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  />
</div>
`;
